system/longhorn-system/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Longhorn-UI
    hajimari.io/icon: harddisk
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.eaglepass.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.eaglepass.io
      secretName: longhorn-tls-certificate
status:
  loadBalancer:
    ingress:
      - ip: 10.0.60.225
